# MoodipyTest

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
Moodipy/: MoodAnalyzerGUI.py  PlaylistGenerator.py  main.py
Moodipy/imgs/: message.txt
