[metadata]
name = MoodipyT
version= 0.1
author = Noteworthy
description = file:README
url = https://github.com/dianas11xx/MoodipyTest

[options]
package_dir = =Moodipy
packages=find:
python_requires =>=3.8, <4
install_requires = 
    spotipy==2.18.0
    nltk==3.6.2
    PyQt5==5.12
    PyQt5-sip==4.19.19
    PyQt5.QtWidgets
    PyQt5.QtGui
    PyQt5.QtCore
    screeninfo
    requests.exceptions
    sys
    os
    nltk.downloader punkt
    nltk.downloader stopwords
    nltk.downloader averaged_perceptron_tagger
    nltk.downloader wordnet
    pyqt5-dev-tools
    qttools5-dev-tools
  
[options.package_data]
    imgs = imgs/*jpeg, imgs/*png
[options.entry_points]
console_scripts = start = Moodipy.main:main 
